--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,4 +14,4 @@ jobs:
     #- name: Print nixpkgs version
       #run: nix-instantiate --eval -E '(import <nixpkgs> {}).lib.version'
     - run: nix build
-    - run: nix flake check
+    - run: nix flake check --impure
