--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,6 +4,7 @@ on:
   push:
 jobs:
   nix-build:
+    name: "build"
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -14,6 +15,7 @@ jobs:
     - run: nix build
   nix-flake-check:
     runs-on: ubuntu-latest
+    name: "check"
     steps:
     - uses: actions/checkout@v3
     - uses: cachix/install-nix-action@v16
@@ -23,6 +25,7 @@ jobs:
     - run: nix flake check --impure
   nixfmt:
     runs-on: ubuntu-latest
+    name: "fmt"
     steps:
     - uses: actions/checkout@v3
     - uses: cachix/install-nix-action@v16
@@ -32,5 +35,5 @@ jobs:
         nix_path: nixpkgs=channel:nixos-unstable
         # Nix Flakes doesn't work on shallow clones
         fetch-depth: 0
-    - name: "treefmt - nixfmt"
-      run: nix-shell -p pkgs.treefmt pkgs.nixpkgs-fmt --command "treefmt --fail-on-change"
+    - name: "treefmt"
+      run: nix develop .#fmtShell --command treefmt --fail-on-change
